--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@wix/api-client": "^1.1.59",
+    "@wix/bookings": "^1.0.127",
+    "@wix/redirects": "^1.0.12",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "next": "13.3.2",
