--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@wix/api-client": "^1.1.59",
     "@wix/bookings": "^1.0.127",
+    "@wix/ecom": "^1.0.164",
+    "@wix/events": "^1.0.80",
+    "@wix/pricing-plans": "^1.0.17",
     "@wix/redirects": "^1.0.12",
+    "@wix/stores": "^1.0.60",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "next": "13.3.2",
