--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@wix/stores": "^1.0.60",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "js-cookie": "^3.0.5",
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
