--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@wix/api-client": "^1.1.59",
     "@wix/bookings": "^1.0.127",
+    "@wix/data": "^1.0.2",
     "@wix/ecom": "^1.0.164",
     "@wix/events": "^1.0.80",
     "@wix/pricing-plans": "^1.0.17",
