--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@wix/data": "^1.0.2",
     "@wix/ecom": "^1.0.164",
     "@wix/events": "^1.0.80",
+    "@wix/members": "^1.0.12",
     "@wix/pricing-plans": "^1.0.17",
     "@wix/redirects": "^1.0.12",
     "@wix/stores": "^1.0.60",
