--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,19 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Yarn Berry
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+#IDE
+.idea
+/test-results/
+/playwright-report/
+/playwright/.cache/
+
