--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "yarn e2e",
+    "e2e": "yarn playwright test",
     "lint": "next lint"
   },
   "eslintConfig": {
@@ -27,5 +29,8 @@
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.34.3"
   }
 }
