--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,5 +11,5 @@ updates:
    versioning-strategy: lockfile-only
    schedule:
      interval: "weekly"
+     # Check for npm updates on Saturdays
      day: "saturday"
-     time: "09:00"
