--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,12 @@
       "onAutoForward": "openPreview"
     }
   },
-  "features": {}
+  "features": {},
+  "customizations": {
+    "codespaces": {
+      "openFiles": [
+        "README"
+      ]
+    }
+  }
 }
