--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "^13.4.9",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "^13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
