--- a/.github/workflows/vercel-e2e.yml
+++ b/.github/workflows/vercel-e2e.yml
@@ -7,10 +7,10 @@ on:
   workflow_dispatch:
     inputs:
       deploymentUrl:
-        description: 'The deployment URL to test with'
+        description: "The deployment URL to test with"
         required: true
       prNumber:
-        description: 'Pull request number (optional)'
+        description: "Pull request number (optional)"
         required: false
 jobs:
   vercel-e2e:
@@ -18,22 +18,22 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        cache: 'yarn'
-    - name: Install dependencies
-      run: yarn
-    - uses: ./.github/actions/setup-playwright
-    - name: Set Run with URL
-      run: |
-        echo "setting DEPLOYMENT_URL=${{ github.event.inputs.deploymentUrl || github.event.deployment_status.target_url }}"
-        echo "DEPLOYMENT_URL=${{ github.event.inputs.deploymentUrl || github.event.deployment_status.target_url }}" >> $GITHUB_ENV
-    - uses: ./.github/actions/run-playwright
-      id: runPlaywright
-      with:
-        provider: 'vercel'
-        githubToken: ${{ secrets.GITHUB_TOKEN }}
-        prNumber: ${{ github.event.inputs.prNumber }}
-        provider-deployment-url: ${{ env.DEPLOYMENT_URL }}
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "yarn"
+      - name: Install dependencies
+        run: yarn
+      - uses: ./.github/actions/setup-playwright
+      - name: Set Run with URL
+        run: |
+          echo "setting DEPLOYMENT_URL=${{ github.event.inputs.deploymentUrl || github.event.deployment_status.target_url }}"
+          echo "DEPLOYMENT_URL=${{ github.event.inputs.deploymentUrl || github.event.deployment_status.target_url }}" >> $GITHUB_ENV
+      - uses: ./.github/actions/run-playwright
+        id: runPlaywright
+        with:
+          provider: "vercel"
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          prNumber: ${{ github.event.inputs.prNumber }}
+          provider-deployment-url: ${{ env.DEPLOYMENT_URL }}
